--- a/frontend/src/components/NotFound/notFound.module.css
+++ b/frontend/src/components/NotFound/notFound.module.css
@@ -10,7 +10,7 @@
 
 .container a {
   font-size: 1rem;
-  background-color: red;
+  background-color: rgb(104, 104, 104);
   color: white;
   border-radius: 5rem;
   padding: 0.8rem 1rem;
