--- a/frontend/src/components/Thumbnails/thumbnails.module.css
+++ b/frontend/src/components/Thumbnails/thumbnails.module.css
@@ -8,7 +8,7 @@
 }
 
 .list li a {
-  height: 23rem;
+  height: 24rem;
   width: 20rem;
   border: 1px solid rgb(189, 189, 189);
   border-radius: 1rem;
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  color: red;
+  color: rgb(105, 105, 105);
 }
 
 .image {
@@ -35,10 +35,11 @@
   top: 0.5rem;
   right: 1rem;
   font-size: 1.2rem;
+  color: #414141;
 }
 
 .favorite.not {
-  color: rgb(180, 180, 180);
+  color: rgb(231, 231, 231);
 }
 
 .stars {
@@ -76,9 +77,23 @@
   position: absolute;
   bottom: 0;
   left: 0.9rem;
-  background-color: white;
   padding: 0.3rem 100% 0 0;
   color: #414141;
   margin-top: 0.7rem;
   font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.btn {
+  border: none;
+  outline: none;
+  cursor: grab;
+  padding: 0.7rem 0.5rem;
+  background: rgb(110, 110, 110);
+  font-size: 1rem;
+}
+.btn::before {
+  content: "Add to cart";
+  font-family: "Schoolbell", cursive;
+  color: white !important;
 }
