--- a/frontend/src/components/Input/input.module.css
+++ b/frontend/src/components/Input/input.module.css
@@ -2,12 +2,12 @@
   width: 100%;
   height: 100%;
   border: none;
-  border-bottom: 0 solid red;
+  border-bottom: 0 solid rgb(73, 73, 73);
   transition: border-width 0.15s ease-out;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(190, 190, 190);
   font-size: 1.1rem;
   outline: none;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   padding: 0.5rem;
 }
 
