--- a/frontend/src/pages/Home/Cart/cartPage.module.css
+++ b/frontend/src/pages/Home/Cart/cartPage.module.css
@@ -4,6 +4,8 @@
   align-items: flex-start;
   margin: 1.5rem;
   margin-top: 0.5rem;
+  background-color: rgb(230, 230, 230);
+  border-radius: 1rem;
 }
 
 .list {
@@ -11,11 +13,12 @@
   flex-direction: column;
   flex: 3 0;
   justify-content: space-evenly;
-  border: 1px solid red;
+  border: 1px solid rgb(211, 211, 211);
   border-radius: 1rem;
   list-style-type: none;
   margin: 0.5rem;
   padding: 0;
+  background-color: rgb(220, 220, 220);
 }
 
 .list li {
@@ -49,14 +52,15 @@
   width: 3rem;
   outline: none;
   border: none;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid rgb(7, 7, 7);
   font-size: 1.1rem;
   border-radius: 0.2rem;
   font-weight: 100;
 }
 
 .list .delete_btn {
-  color: red;
+  color: black !important;
+  background-color: red !important;
   padding: 0.6rem;
   opacity: 0.8;
   border: none;
@@ -68,16 +72,18 @@
 .list .delete_btn:hover {
   opacity: 1;
   cursor: pointer;
+  background-color: red;
 }
 
 .checkout {
   display: flex;
+  background-color: rgb(220, 220, 220);
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   flex: 1 3;
   height: 20rem;
-  border: 1px solid red;
+  border: 1px solid rgb(211, 211, 211);
   border-radius: 1rem;
   padding: 0.5rem;
   margin: 0.5rem;
@@ -97,8 +103,9 @@
   margin-bottom: 1.5rem;
 }
 .checkout .foods_count::before {
-  content: "Count: ";
-  color: grey;
+  content: "Total Items: ";
+  color: rgb(131, 131, 131);
+  font-weight: 600;
 }
 
 .checkout .total_price::before {
@@ -110,7 +117,7 @@
   justify-self: center;
   text-align: center;
   width: 99%;
-  background: red;
+  background: rgb(131, 131, 131);
   border-radius: 0.9rem;
   padding: 0.5rem;
   color: white;
