--- a/frontend/src/pages/Home/Food/foodPage.module.css
+++ b/frontend/src/pages/Home/Food/foodPage.module.css
@@ -36,12 +36,12 @@
   font-weight: bold;
 }
 .favorite {
-  color: rgb(255, 0, 0);
+  color: rgb(255, 117, 117);
   font-size: 2.5rem;
 }
 
 .favorite.not {
-  color: rgb(182, 182, 182);
+  color: rgb(238, 196, 196);
 }
 
 .origin {
@@ -51,11 +51,11 @@
 }
 
 .origin > span {
-  padding: 0.5rem;
+  padding: 0 0.5rem;
   font-size: 1.2rem;
   margin: 0.5rem 0.5rem 0 0;
   border-radius: 2rem;
-  background-color: rgb(202, 218, 231);
+  background-color: rgb(230, 230, 230);
 }
 .cooktime {
   margin-top: 1rem;
@@ -63,14 +63,13 @@
 
 .cooktime span {
   padding: 0.6rem 2rem 0.6rem 0;
-  border-radius: 10rem;
   font-size: 1.3rem;
 }
 .price {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin: 1rem 1rem 1rem 0;
-  color: green;
-  font-weight: 400;
+  color: rgb(129, 129, 129);
+  font-weight: 600;
 }
 
 .price::before {
@@ -79,11 +78,12 @@
 }
 
 .container button {
-  color: white;
-  background-color: red;
+  color: rgb(129, 129, 129);
+  background-color: rgb(200, 200, 200);
   border: none;
   font-size: 1.2rem;
-  border-radius: 5rem;
+  font-weight: 600;
+  border-radius: 1rem;
   padding: 1rem;
 }
 
