--- a/frontend/src/pages/Login/loginPage.module.css
+++ b/frontend/src/pages/Login/loginPage.module.css
@@ -15,3 +15,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
