Add: registerpage.js

--- a/frontend/src/components/InputContainer/inputContainer.module.css
+++ b/frontend/src/components/InputContainer/inputContainer.module.css
@@ -3,7 +3,7 @@
   margin-bottom: 0.5rem;
   border-radius: 0.7rem;
   padding-top: 0.3rem;
-  border: 1px solid white;
+  border: 1px solid rgb(190, 190, 190);
 }
 
 .label {
