--- a/frontend/src/components/Input/input.module.css
+++ b/frontend/src/components/Input/input.module.css
@@ -2,17 +2,18 @@
   width: 100%;
   height: 100%;
   border: none;
-  border-bottom: 0 solid rgb(73, 73, 73);
+  border-bottom: 0.1rem solid rgb(73, 73, 73);
   transition: border-width 0.15s ease-out;
-  background-color: rgb(190, 190, 190);
+  background-color: rgb(223, 223, 223);
   font-size: 1.1rem;
   outline: none;
   border-radius: 0.5rem;
   padding: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
 .input::placeholder {
-  color: rgb(190, 190, 190);
+  color: rgb(73, 73, 73);
   font-size: 0.95rem;
 }
 
