--- a/frontend/src/components/Thumbnails/thumbnails.module.css
+++ b/frontend/src/components/Thumbnails/thumbnails.module.css
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  color: rgb(105, 105, 105);
+  color: rgb(255, 132, 0);
+  font-weight: 900;
 }
 
 .image {
@@ -35,11 +36,11 @@
   top: 0.5rem;
   right: 1rem;
   font-size: 1.2rem;
-  color: #414141;
+  color: #ff9101;
 }
 
 .favorite.not {
-  color: rgb(231, 231, 231);
+  color: rgb(255, 232, 216);
 }
 
 .stars {
@@ -54,10 +55,10 @@
 
 .origin span {
   border-radius: 2rem;
-  background-color: rgb(228, 228, 228);
+  background-color: rgb(255, 241, 220);
   display: inline-block;
   font-size: 0.8rem;
-  color: rgb(107, 107, 107);
+  color: rgb(255, 153, 1);
   margin-right: 0.3rem;
   padding: 0 0.5rem;
   margin-top: 0.2rem;
