--- a/frontend/src/components/Search/search.module.css
+++ b/frontend/src/components/Search/search.module.css
@@ -6,24 +6,27 @@
 }
 
 .container input {
-  border-radius: 1rem 0 0 1rem;
+  border-radius: 2rem 0 0 2rem;
   border: none;
   height: 2.5rem;
   width: 15rem;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(229, 226, 210);
   padding: 1rem;
   font-size: 1rem;
   outline: none;
 }
 
 .container button {
-  color: rgb(230, 230, 230);
+  color: rgb(235, 99, 2);
   height: 2.5rem;
   width: 5rem;
   font-size: 1.1rem;
-  border-radius: 0 1rem 1rem 0;
+  border-radius: 0 2rem 2rem 0;
   border: none;
-  background-color: rgb(102, 102, 102);
+  background: linear-gradient(
+    rgba(255, 213, 136, 0.708),
+    rgba(214, 239, 135, 0.632)
+  );
   font-weight: 600;
   opacity: 0.8;
   outline: none;
