--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Cabin+Sketch:wght@400;700&family=Cardo:ital,wght@0,400;0,700;1,400&family=Londrina+Outline&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Revolution&family=Roboto+Slab:wght@100..900&family=Schoolbell&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -9,10 +11,10 @@ html {
 }
 
 body {
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(255, 253, 236);
   margin: 0;
-  font-family: "Urbanist", serif;
-  font-size: 1rem;
+  font-family: "schoolbell";
+  font-size: 1.3rem;
 }
 
 a {
