--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -6,9 +6,13 @@
 .header a {
   color: rgb(255, 64, 0);
 }
-
 .header a:hover {
-  background: rgb(255, 123, 0);
+  background: rgb(255, 116, 70);
+  color: rgb(255, 232, 210);
+}
+
+.header {
+  background: rgb(255, 182, 113);
   color: rgb(255, 232, 210);
 }
 
