--- a/frontend/src/components/Map/map.module.css
+++ b/frontend/src/components/Map/map.module.css
@@ -12,22 +12,26 @@
 }
 
 .find_location {
-  position: absolute;
+  position: relative;
   margin: auto;
-  width: 12rem;
-  min-height: 2.5rem;
+  width: fit-content;
+  min-height: fit-content;
   font-size: 1rem;
+  font-weight: 700;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.507);
-  backdrop-filter: blur(5px);
+  background-color: rgba(51, 26, 2, 0.24);
+  backdrop-filter: blur(1rem);
   cursor: pointer;
-  border-radius: 0.2rem 0.2rem 1rem 1rem;
+  border-radius: 0rem 0rem 0.5rem 0.5rem  ;
   border: none;
-  border-top: 1px;
+  border-top: 0;
+  padding: 5px;
+  color: rgb(255, 244, 225);
 }
 .find_location:hover {
-  background-color: rgba(255, 255, 255, 0.842);
+  /* background-color: rgb(229, 255, 211); */
+  background-color: rgba(0, 0, 0, 0.486);
 }
