--- a/frontend/src/pages/Home/Cart/cartPage.module.css
+++ b/frontend/src/pages/Home/Cart/cartPage.module.css
@@ -4,7 +4,7 @@
   align-items: flex-start;
   margin: 1.5rem;
   margin-top: 0.5rem;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(255, 250, 215);
   border-radius: 1rem;
 }
 
@@ -18,7 +18,7 @@
   list-style-type: none;
   margin: 0.5rem;
   padding: 0;
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(255, 253, 236);
 }
 
 .list li {
@@ -59,7 +59,7 @@
 }
 
 .list .delete_btn {
-  color: black !important;
+  color: rgb(255, 158, 158);
   background-color: red !important;
   padding: 0.6rem;
   opacity: 0.8;
@@ -77,7 +77,7 @@
 
 .checkout {
   display: flex;
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(255, 253, 236);
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -117,7 +117,7 @@
   justify-self: center;
   text-align: center;
   width: 99%;
-  background: rgb(131, 131, 131);
+  background: rgb(255, 116, 70);
   border-radius: 0.9rem;
   padding: 0.5rem;
   color: white;
@@ -126,6 +126,7 @@
 }
 
 .checkout a:hover {
-  opacity: 0.8;
+  background-color: rgb(255, 192, 171);
   cursor: pointer;
+  color: rgb(255, 64, 0);
 }
