--- a/frontend/src/pages/Home/Food/foodPage.module.css
+++ b/frontend/src/pages/Home/Food/foodPage.module.css
@@ -78,16 +78,18 @@
 }
 
 .container button {
-  color: rgb(129, 129, 129);
-  background-color: rgb(200, 200, 200);
+  color: rgb(255, 237, 231);
+  background-color: rgb(255, 116, 70);
   border: none;
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 700;
   border-radius: 1rem;
   padding: 1rem;
 }
 
 .container button:hover {
-  opacity: 0.8;
+  /* opacity: 0.8; */
   cursor: pointer;
+  color: rgb(250, 73, 14);
+  background-color: rgb(255, 178, 153);
 }
